# zarr-proxy

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  samconfig.toml  setup.cfg  template.yaml
.github/: dependabot.yml
.github/workflows/: deploy.yaml  main.yaml
deployments/aws/: .env.example  README.md  cdk.json  package.json  requirements.txt
deployments/aws/lambda/: Dockerfile  handler.py
deployments/aws/stack/: app.py  config.py
tests/: conftest.py  test_dataset.py  test_helpers.py  test_logic.py  test_ping.py  test_store.py
zarr_proxy/: config.py  exceptions.py  helpers.py  log.py  logic.py  main.py  store.py
zarr_proxy/api/: dataset.py  ping.py  store.py
