[project]
name = "zarr-proxy"
description = "Zarr Proxy"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pangeo Developers", email = "foo@bar.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "aiohttp",
    "fastapi",
    "fsspec",
    "requests",
    "zarr",
    "pydantic>=2.0",
    "pydantic-settings>=2.0"

]
dynamic = ["version"]




[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
fallback_version = "999"

[tool.setuptools]
packages = ["zarr_proxy"]


[tool.coverage.run]
omit = ["tests/*"]
branch = true



[tool.ruff]
line-length = 100
target-version = "py39"
builtins = ["ellipsis"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.lint]
per-file-ignores = {}
ignore = [
    "E721", # Comparing types instead of isinstance
    "E741", # Ambiguous variable names
    "E501", # Conflicts with ruff format
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]


[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["offsets_db_api"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--cov=./ --cov-report=xml  --cov-report=term-missing --verbose"
